顧客情報新規登録API追加
